--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,4 @@
-/**
-* Template Name: Medicio - v4.7.0
-* Template URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
@@ -849,20 +840,20 @@ section {
 /*--------------------------------------------------------------
 # Appointments
 --------------------------------------------------------------*/
-.appointment .php-email-form {
+.appointment .email-form {
   width: 100%;
 }
-.appointment .php-email-form .form-group {
+.appointment .email-form .form-group {
   padding-bottom: 8px;
 }
-.appointment .php-email-form .validate {
+.appointment .email-form .validate {
   display: none;
   color: red;
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
 }
-.appointment .php-email-form .error-message {
+.appointment .email-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -870,10 +861,10 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.appointment .php-email-form .error-message br + br {
+.appointment .email-form .error-message br + br {
   margin-top: 25px;
 }
-.appointment .php-email-form .sent-message {
+.appointment .email-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -881,13 +872,13 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.appointment .php-email-form .loading {
+.appointment .email-form .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
 }
-.appointment .php-email-form .loading:before {
+.appointment .email-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -899,22 +890,22 @@ section {
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
 }
-.appointment .php-email-form input, .appointment .php-email-form textarea, .appointment .php-email-form select {
+.appointment .email-form input, .appointment .email-form textarea, .appointment .email-form select {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
   padding: 10px !important;
 }
-.appointment .php-email-form input:focus, .appointment .php-email-form textarea:focus, .appointment .php-email-form select:focus {
+.appointment .email-form input:focus, .appointment .email-form textarea:focus, .appointment .email-form select:focus {
   border-color: #3fbbc0;
 }
-.appointment .php-email-form input, .appointment .php-email-form select {
+.appointment .email-form input, .appointment .email-form select {
   height: 44px;
 }
-.appointment .php-email-form textarea {
+.appointment .email-form textarea {
   padding: 10px 12px;
 }
-.appointment .php-email-form button[type=submit] {
+.appointment .email-form button[type=submit] {
   background: #3fbbc0;
   border: 0;
   padding: 10px 35px;
@@ -922,7 +913,7 @@ section {
   transition: 0.4s;
   border-radius: 50px;
 }
-.appointment .php-email-form button[type=submit]:hover {
+.appointment .email-form button[type=submit]:hover {
   background: #52c2c6;
 }
 
@@ -1361,11 +1352,11 @@ section {
   font-size: 14px;
   margin-bottom: 0;
 }
-.contact .php-email-form {
+.contact .email-form {
   box-shadow: 0 0 20px rgba(214, 215, 216, 0.5);
   padding: 30px;
 }
-.contact .php-email-form .error-message {
+.contact .email-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -1373,10 +1364,10 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.contact .php-email-form .error-message br + br {
+.contact .email-form .error-message br + br {
   margin-top: 25px;
 }
-.contact .php-email-form .sent-message {
+.contact .email-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -1384,13 +1375,13 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.contact .php-email-form .loading {
+.contact .email-form .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
 }
-.contact .php-email-form .loading:before {
+.contact .email-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -1402,21 +1393,21 @@ section {
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
 }
-.contact .php-email-form input, .contact .php-email-form textarea {
+.contact .email-form input, .contact .email-form textarea {
   border-radius: 4px;
   box-shadow: none;
   font-size: 14px;
 }
-.contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
+.contact .email-form input:focus, .contact .email-form textarea:focus {
   border-color: #3fbbc0;
 }
-.contact .php-email-form input {
+.contact .email-form input {
   padding: 10px 15px;
 }
-.contact .php-email-form textarea {
+.contact .email-form textarea {
   padding: 12px 15px;
 }
-.contact .php-email-form button[type=submit] {
+.contact .email-form button[type=submit] {
   background: #3fbbc0;
   border: 0;
   padding: 10px 30px;
@@ -1424,7 +1415,7 @@ section {
   transition: 0.4s;
   border-radius: 4px;
 }
-.contact .php-email-form button[type=submit]:hover {
+.contact .email-form button[type=submit]:hover {
   background: #65c9cd;
 }
 @-webkit-keyframes animate-loading {
